[package]
name = "pax"
version = "0.0.1"
edition = "2021"
homepage = 'https://github.com/harrybrwn/pax'
authors = ["Harry Brown <harry@hrry.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9.0"
clap = { version = "4.4.18", features = ["derive", "env"] }
mlua = { version = "0.9.6", features = ["lua54", "vendored", "macros", "async"] }
mlua_derive = { version = "0.9.2" }
pax-derive = { path = "../pax-derive" }
tar = "0.4"
flate2 = "1.0"
hyper = { version = "0.14.27", features = ["client", "http1", "http2", "runtime"] }
hyper-rustls = { version = "0.24.1", features = ["http2"] }
url = "2.5.0"
git-url-parse = "0.4.5"
md-5 = "0.10.6"
hex = "0.4.3"
toml = "0.8.12"
# cargo = { version = "0.78.1", features = ["all-static"] }
cargo = { version = "0.85.0", features = ["all-static"] }
anyhow = "1.0.82"
git2 = { version = "^0.19.0", features = ["vendored-libgit2", "vendored-openssl"] }
tokio = { version = "1.37.0", features = ["macros"] }
rand = "0.8.5"
chrono = "0.4.38"
xz2 = "0.1.7"
